@@ -111,14 +111,8 @@
         <dependency>
             <groupId>edu.internet2.middleware</groupId>
             <artifactId>shibboleth-jce</artifactId>
-            <version>1.0.0</version>
+            <version>1.1.0</version>
             <scope>runtime</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>tomcat</groupId>
-                    <artifactId>catalina</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         
         <!-- Test dependencies -->
